5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1836_2603.log
== SUBMITION (2019-06-30 22:38:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("Vet: ")))
x=x
for i in range(4):
	x[:i]=sorted(a[:,i],reverse= True)
	
print(a)
-- EXECUTION TIME:
1.17814
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 6, in <module>
    x[:i]=sorted(a[:,i],reverse= True)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:38:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("Vet: ")))
x=x
for i in range(4):
	x[:i]=sorted(a[:,i],reverse= True)
	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:38:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("Vet: ")))
x=x
for i in range(4):
	x[:i]=sorted(ax[:,i],reverse= True)
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:38:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("Vet: ")))
x=x
for i in range(4):
	x[:i]=sorted(x[:,i],reverse= True)
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:39:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("Vet: ")))
x=x
for i in range(4):
	x[:i]=sorted(x[:,i],reverse= True)
	
print(x)
-- EXECUTION TIME:
1.08339
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 3 2 2]
 [4 3 2 2]
 [4 3 2 2]
 [4 4 4 4]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[3 3 2 2]
 [3 3 2 2]
 [3 3 2 2]
 [1 4 4 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:39:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("Vet: ")))
x=x
for i in range(4):
	x[:,i]=sorted(x[:,i],reverse= True)
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:39:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("Vet: ")))
x=x
for i in range(4):
	x[:,i]=sorted(x[:,i],reverse= True)
	
print(x)
-- EXECUTION TIME:
1.19299
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
